adicionando icon janela do navegador

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="https://pro2-bar-s3-cdn-cf2.myportfolio.com/761f1db59d977dd39ee054b65a9e3fdf/dc00faec72a31cb8918f3c5f_rw_1920.png?h=cfb1e03dc40541e99a7732c0f9b54d93" type="image/x-icon">
     <title>StarWars</title>
 </head>
 <body>
